mongoDB/kubernetes/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydatabase
  namespace: lang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoDB
  template:
    metadata:
      labels:
        app: mongoDB
    spec:
      containers:
        - name: mongodb
          image: mongo
          args: ["--dbpath", "/run/desktop/mnt/host/c/Users/alvar/data/db"]
          volumeMounts:
            - name: "mongo-data"
              mountPath: "/run/desktop/mnt/host/c/Users/alvar/data/db"
      volumes:
        - name: "mongo-data"
          persistentVolumeClaim:
            claimName: "mongo-data-claim"
