mongoDB/kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydatabase-service
  namespace: lang
spec:
  type: NodePort
  selector:
    app: mongoDB
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 31001
